# template__json_nlohmann_flow_qwidget

./: README.md
src/: CMakeLists.txt  CMakeSettings.json  main.cpp  mainapp.cpp  mainapp.h  mainwindow.cpp  mainwindow.ui  out.json  pro.qrc  test.cpp  test.h
src/SkdVision/: CMakeLists.txt
src/SkdVision/BasicDef/: SKDVISION_global.h  skd_vision_basic.c  skd_vision_basic.h
src/SkdVision/algorithmsNaitive/: algorithmbaseNaitive.cpp  algorithmbaseNaitive.h
src/SkdVision/algorithmsNaitive/PreProc/filter/: FilterGSobel.h  filtermean.cpp  filtermean.h  filtermidean.h
src/SkdVision/algorithmsNaitive/PreProc/oneImgProc/: HistEquat.cpp  HistEquat.h  contourcanny.h  findcontours.cpp  imgcvtcolor.cpp  threashold.cpp  threashold.h  thresholdotsu.cpp
src/SkdVision/algorithmsNaitive/measure/fit/: fitcircle.cpp  fitcircle.h  fitline.cpp  fitterline.cpp  fitterline.h
src/WMSVision/: CMakeLists.txt
src/WMSVision/BasicDef/: WMSVISION_global.h  skd_vision_basic_cpp.cpp  skd_vision_basic_cpp.h  vision_basic.cpp  vision_basic.h  wms_vision_basic.c  wms_vision_basic.h  wms_vision_basic_cpp.cpp  wms_vision_basic_cpp.h
src/WMSVision/algorithmsNaitive/: algorithmbaseNaitive.h
src/WMSVision/algorithmsNaitive/Locater/: templatematching.cpp  templatematching.h
src/WMSVision/algorithmsNaitive/PreProc/filter/: FilterGSobel.cpp  filteraussian.cpp  filteraussian.h  filtermidean.cpp
src/WMSVision/algorithmsNaitive/PreProc/oneImgProc/: contourcanny.cpp  findcontours.h  imgcvtcolor.h  thresholdotsu.h
src/WMSVision/algorithmsNaitive/imgSource/: api_imgSource.cpp  api_imgSource.h  loadimage.cpp  loadimage.h
src/WMSVision/algorithmsNaitive/measure/fit/: fitline.h  fitterline.h
src/platfm/: CMakeLists.txt  commonfunc.cpp  commonfunc.h  mainapp.cpp  mainapp.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp
src/platfm/common/: commonfunc.h
src/platfm/tools/: mainapp.cpp  mainapp.h
src/platfm/ui/: mainwindow.cpp  mainwindow.h
